--- a/src/SchedulingWebMobileApi/appsettings.json
+++ b/src/SchedulingWebMobileApi/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "Database": "Server=66.45.237.227; Port=3306; Database=rawhostc_sj90; Uid=rawhostc_sj90; Pwd=lrSHsGP1V}.K;"
+  },
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
