:sparkles: Implementa Agendamento

--- a/src/SchedulingWebMobileApi.Application/SchedulingWebMobileApi.Application.csproj
+++ b/src/SchedulingWebMobileApi.Application/SchedulingWebMobileApi.Application.csproj
@@ -5,8 +5,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SchedulingWebMobileApi.Context\SchedulingWebMobileApi.Context.csproj" />
     <ProjectReference Include="..\SchedulingWebMobileApi.Core\SchedulingWebMobileApi.Core.csproj" />
     <ProjectReference Include="..\SchedulingWebMobileApi.Models\SchedulingWebMobileApi.Models.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="Microsoft.AspNetCore.Http.Abstractions">
+      <HintPath>..\..\..\..\..\..\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.aspnetcore.http.abstractions\2.0.1\lib\netstandard2.0\Microsoft.AspNetCore.Http.Abstractions.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
