--- a/src/SchedulingWebMobileApi.Core/SchedulingWebMobileApi.Core.csproj
+++ b/src/SchedulingWebMobileApi.Core/SchedulingWebMobileApi.Core.csproj
@@ -7,7 +7,8 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="7.0.1" />
     <PackageReference Include="Dapper" Version="1.50.5" />
-    <PackageReference Include="MySqlConnector" Version="0.43.0" />
+    <PackageReference Include="Dapper.Extension" Version="1.0.0.1" />
+    <PackageReference Include="MySqlConnector" Version="0.44.1" />
   </ItemGroup>
 
   <ItemGroup>
