--- a/src/SchedulingWebMobileApi.Models/SchedulingWebMobileApi.Models.csproj
+++ b/src/SchedulingWebMobileApi.Models/SchedulingWebMobileApi.Models.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\SchedulingWebMobileApi.Domain\SchedulingWebMobileApi.Domain.csproj" />
   </ItemGroup>
 
