--- a/src/SchedulingWebMobileApi/SchedulingWebMobileApi.csproj
+++ b/src/SchedulingWebMobileApi/SchedulingWebMobileApi.csproj
@@ -21,4 +21,10 @@
     <ProjectReference Include="..\SchedulingWebMobileApi.IoC\SchedulingWebMobileApi.IoC.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="View\index.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
