--- a/src/SchedulingWebMobileApi/appsettings.json
+++ b/src/SchedulingWebMobileApi/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "Database": "Server=66.45.237.227; Port=3306; Database=rawhostc_sj90; Uid=rawhostc_sj90; Pwd=lrSHsGP1V}.K;; convert zero datetime=True; Allow User Variables=true"
+    "Database": 'Server="rawhost.com.br"; Port=3306; Database="rawhostc_sj90"; Uid="rawhostc_sj90"; Pwd="!nfn$et$j90"; SslMode=Required; convert zero datetime=True; Allow User Variables=true'
   },
   "Logging": {
     "IncludeScopes": false,
