--- a/src/SchedulingWebMobileApi.Application/SchedulingWebMobileApi.Application.csproj
+++ b/src/SchedulingWebMobileApi.Application/SchedulingWebMobileApi.Application.csproj
@@ -14,10 +14,7 @@
     <ProjectReference Include="..\SchedulingWebMobileApi.Models\SchedulingWebMobileApi.Models.csproj" />
   </ItemGroup>
 
-  <ItemGroup>
-    <Reference Include="Microsoft.AspNetCore.Http.Abstractions">
-      <HintPath>..\..\..\..\..\..\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.aspnetcore.http.abstractions\2.0.1\lib\netstandard2.0\Microsoft.AspNetCore.Http.Abstractions.dll</HintPath>
-    </Reference>
+    <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
   </ItemGroup>
-
 </Project>
