--- a/src/SchedulingWebMobileApi.Context/SchedulingWebMobileApi.Context.csproj
+++ b/src/SchedulingWebMobileApi.Context/SchedulingWebMobileApi.Context.csproj
@@ -8,10 +8,8 @@
     <ProjectReference Include="..\SchedulingWebMobileApi.Domain\SchedulingWebMobileApi.Domain.csproj" />
   </ItemGroup>
 
-  <ItemGroup>
-    <Reference Include="Microsoft.AspNetCore.Http.Abstractions">
-      <HintPath>..\..\..\..\..\..\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.aspnetcore.http.abstractions\2.0.1\lib\netstandard2.0\Microsoft.AspNetCore.Http.Abstractions.dll</HintPath>
-    </Reference>
+    <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
   </ItemGroup>
 
 </Project>
