:sparkles: Altera connection string

--- a/src/SchedulingWebMobileApi/appsettings.json
+++ b/src/SchedulingWebMobileApi/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "Database": 'Server="rawhost.com.br"; Port=3306; Database="rawhostc_sj90"; Uid="rawhostc_sj90"; Pwd="!nfn$et$j90"; SslMode=Required; convert zero datetime=True; Allow User Variables=true'
+    "Database": "Server=35.238.114.157;Database=rawhostc_sj90;Uid=root;Pwd=!nfn$et$j90"
   },
   "Logging": {
     "IncludeScopes": false,
