--- a/src/SchedulingWebMobileApi/appsettings.json
+++ b/src/SchedulingWebMobileApi/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "Database": "Server=35.238.114.157;Database=rawhostc_sj90;Uid=root;Pwd=!nfn$et$j90"
+    "Database": "Server=35.238.114.157;Database=rawhostc_sj90;Uid=root;Pwd=!nfn$et$j90; convert zero datetime=True; Allow User Variables=true"
   },
   "Logging": {
     "IncludeScopes": false,
